1.3.6 - TBD

* Fixed issue with the water world rendering mode causing the water plane to
  have an incorrect vertical offset in large scenes.

1.3.5 - 2015-04-20
    * Added option to select visible chunks in the 2D map context menu
      (selects visible chunks inside the camera view indicator)
    * Nether portals now emit light
    * Re-engineered atmosphere and fog rendering, replaced it with a simpler
      but more customizable fog system. Fog density and color can be changed
      by the user (in the "Sky & Fog" tab).
    * Fixed stairs with fog render issue
    * Added a notification after changing the Y cutoff setting about reloading
      the chunks for the setting to take effect.
    * Added new tab icons in the Render Controls window. This fixes the issue
      with huge tabs when a high-resolution texture pack was used.
    * Improved huge mushroom rendering: mushroom blocks with some data values
      were rendered incorrectly
    * Fixed a rendering issue for corner stairs causing various configurations
      to render incorrectly
    * Fixed an error causing incorrect lighting of underwater blocks
    * Fixed button rendering (render new button orientations correctly)
    * The render reset confirmation feature now works as it should when the
      target SPP has been reached
    * Added slider for the target SPP setting
    * Added scroll bars to the render preview when the window is too small to
      fit the entire image
    * The render preview window no longer stretches the image to fit the window
    * Added "Move camera here" item in the map context menu
    * Added "follow camera" option to the Map View tab of the main window
    * Added camera field of view indicator in the 2D map
    * Added single color textures option, found under the Options tab in
      the main window
    * Added paintings rendering
    * The sky light modifier can now be set to zero by typing "0" in the
      text field next to the sky light slider
