@@ -1,6 +1,7 @@
 1.3.6 - TBD
 
-* Fixed issue with the water world rendering mode causing the water plane to
+* Fixed the parallel camera sometimes clipping world chunks.
+* Fixed an issue with the water world rendering mode causing the water plane to
   have an incorrect vertical offset in large scenes.
 
 1.3.5 - 2015-04-20
